# nurture-bridge-tech-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.py  pre-commit-config.yaml  pyproject.toml  requirements-windows.txt  requirements.dev.txt  requirements.txt  verify_super_admin_access.py
.agent/guides/: alembic_migration_guide.md
alembic/: env.py
alembic/versions/: d25d67015462_initial_baseline.py
api/: index.py
app/: __init__.py  main.py  router.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: assessment.py  auth.py  clinical.py  email.py  intake.py  report.py  tenants.py
app/core/: security.py
app/repositories/: clinical_repo.py  intake_repo.py  invitation_repo.py  session_repo.py  tenant_repo.py  user_repo.py
app/schemas/: assessment.py  auth.py  base.py  clinical.py  common.py  intake.py  invitation.py  report.py  tenant.py  user.py
app/services/: ai_service.py  auth_service.py  clinical_service.py  email_service.py  intake_service.py  report_service.py  tenant_service.py
app_logging/: __init__.py  audit.py  conversation_encryption.py  id_hasher.py  logger.py
config/: __init__.py  settings.py
db/: __init__.py  base.py  db_instruction.me  models.py  sql_commands_report_schema.sql
db/migrations/: add_hod_receptionist_roles_and_department.sql  add_name_column.sql  run_add_hod_receptionist_roles_and_department.py  run_add_name_column.py  run_create_sessions_table.py
db/models/: __init__.py  assessment.py  audit.py  auth.py  clinical.py  intake.py  mixins.py  report.py  tenant.py
db/repositories/: base.py
docs/: INTAKE_API.md
email_service/: __init__.py  service.py  templates.py  tenant_mail.py
email_service/templates/: base.html  notification.html  password_reset.html  welcome.html
pii/: __init__.py  privacy.py
scripts/: MIGRATION_SCORES.md  migrate_recalculate_scores.py
security/: __init__.py  auth.py  rbac.py
tasks/: __init__.py  create_super_admin.py  init.py  init_db_tables.py  intake_questions_data.json  reset_db.py  seed_intake_questions.py  seed_questions.py  seed_sections.py  worker.py
tests/: __init__.py  conftest.py  quick_audit_test.py  test_email.py  test_health.py  test_session_auth_manual.py  verify_auth_local.py  verify_invitation_flow.py  verify_tenant_local.py
